Implemented login and logout

--- a/AuthenticationApp/src/AuthServer/Pages/Account/Login.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Login.cshtml
@@ -11,7 +11,7 @@
         <img class="h-5" src="~/images/devchallenges.svg" alt="Logo" />
         <!-- MainContent -->
         <div class="mt-4 flex flex-col items-center">
-            <h4 class="text-lg font-semibold pr-4">Login</h4>
+            <h4 class="w-full text-left text-lg font-semibold pr-4">Login</h4>
             <!-- FormContainer -->
             <div class="w-full flex-1 mt-8">
                 <form class="mx-auto" asp-route-returnUrl="@Model.ReturnUrl" method="post">
@@ -75,4 +75,8 @@
             </div>
         </div>
     </div>
+</div>
+<div class="inline-block z-10 mx-0 sm:mx-auto sm:w-128 bg-transparent text-sm text-gray-600 font-light -mt-8 sm:mt-2 flex justify-between px-4 ">
+    <span>poports</span>
+    <span>devchallenges.io</span>
 </div>
