--- a/AuthenticationApp/src/AuthServer/Pages/Account/Register.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Register.cshtml
@@ -10,8 +10,8 @@
         <img class="h-5" src="~/images/devchallenges.svg" alt="Logo" />
         <!-- MainContent -->
         <div class="mt-4 flex flex-col items-center">
-            <h4 class="text-lg font-semibold pr-4">Join thousands of learners from around the world</h4>
-            <p class="text-base pr-4 mt-4">Master web development by making real-life projects. There are multiple paths for you to choose</p>
+            <h4 class="text-left text-lg font-semibold pr-4">Join thousands of learners from around the world</h4>
+            <p class="text-left text-base pr-4 mt-4">Master web development by making real-life projects. There are multiple paths for you to choose</p>
             <!-- FormContainer -->
             <div class="w-full flex-1 mt-8">
                 <form class="mx-auto" asp-route-returnUrl="@Model.ReturnUrl" method="post">
@@ -75,4 +75,8 @@
             </div>
         </div>
     </div>
+</div>
+<div class="inline-block z-10 mx-0 sm:mx-auto sm:w-128 bg-transparent text-sm text-gray-600 font-light -mt-8 sm:mt-2 flex justify-between px-4 ">
+    <span>poports</span>
+    <span>devchallenges.io</span>
 </div>
