--- a/AuthenticationApp/src/AuthServer/wwwroot/css/app.css
+++ b/AuthenticationApp/src/AuthServer/wwwroot/css/app.css
@@ -606,6 +606,10 @@ input:invalid {
     fill: currentColor;
 }
 
+.text-left {
+    text-align: left;
+}
+
 .text-center {
     text-align: center;
 }
