Include react app in build system

--- a/AuthenticationApp/src/AuthServer/Pages/Account/Register.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Register.cshtml
@@ -7,7 +7,7 @@
 <div class="z-20 mx-0 sm:w-128 sm:mx-auto sm:mt-16 sm:bg-white text-gray-700 sm:shadow-lg h-screen sm:h-full sm:rounded-lg justify-center">
     <!-- MainContainer -->
     <div class="p-12">
-        <img class="h-5" src="~/images/devchallenges.svg" alt="Logo" />
+        <img class="h-5" src="~/dotnet/images/devchallenges.svg" alt="Logo" />
         <!-- MainContent -->
         <div class="mt-4 flex flex-col items-center">
             <h4 class="text-left text-lg font-semibold pr-4">Join thousands of learners from around the world</h4>
