--- a/AuthenticationApp/src/AuthServer/Pages/Account/Login.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Login.cshtml
@@ -8,7 +8,7 @@
 <div class="z-20 mx-0 sm:w-128 sm:mx-auto sm:mt-16 sm:bg-white text-gray-700 sm:shadow-lg h-screen sm:h-full sm:rounded-lg justify-center">
     <!-- MainContainer -->
     <div class="p-12">
-        <img class="h-5" src="~/images/devchallenges.svg" alt="Logo" />
+        <img class="h-5" src="~/dotnet/images/devchallenges.svg" alt="Logo" />
         <!-- MainContent -->
         <div class="mt-4 flex flex-col items-center">
             <h4 class="w-full text-left text-lg font-semibold pr-4">Login</h4>
