--- a/AuthenticationApp/src/AuthServer/Pages/_Layout.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Authentication App</title>
-    <link rel="stylesheet" href="~/css/app.css" />
+    <link rel="stylesheet" href="~/dotnet/css/app.css" />
 </head>
 <body class="font-sans bg-gray-100">
     <div class="min-h-screen w-full">
