--- a/AuthenticationApp/src/AuthServer/wwwroot/dotnet/css/app.css
+++ b/AuthenticationApp/src/AuthServer/wwwroot/dotnet/css/app.css
@@ -11,8 +11,8 @@
  */
 
 html {
-    line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
+	line-height: 1.15; /* 1 */
+	-webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -23,7 +23,7 @@ html {
  */
 
 body {
-    margin: 0;
+	margin: 0;
 }
 
 /**
@@ -56,7 +56,7 @@ body {
  */
 
 a {
-    background-color: transparent;
+	background-color: transparent;
 }
 
 /**
@@ -90,7 +90,7 @@ a {
  */
 
 img {
-    border-style: none;
+	border-style: none;
 }
 
 /* Forms
@@ -103,10 +103,10 @@ img {
 
 button,
 input {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
-    margin: 0; /* 2 */
+	font-family: inherit; /* 1 */
+	font-size: 100%; /* 1 */
+	line-height: 1.15; /* 1 */
+	margin: 0; /* 2 */
 }
 
 /**
@@ -115,8 +115,9 @@ input {
  */
 
 button,
-input { /* 1 */
-    overflow: visible;
+input {
+	/* 1 */
+	overflow: visible;
 }
 
 /**
@@ -124,8 +125,9 @@ input { /* 1 */
  * 1. Remove the inheritance of text transform in Firefox.
  */
 
-button { /* 1 */
-    text-transform: none;
+button {
+	/* 1 */
+	text-transform: none;
 }
 
 /**
@@ -133,31 +135,31 @@ button { /* 1 */
  */
 
 button,
-[type="button"],
-[type="submit"] {
-    -webkit-appearance: button;
+[type='button'],
+[type='submit'] {
+	-webkit-appearance: button;
 }
 
-    /**
+/**
  * Remove the inner border and padding in Firefox.
  */
 
-    button::-moz-focus-inner,
-    [type="button"]::-moz-focus-inner,
-    [type="submit"]::-moz-focus-inner {
-        border-style: none;
-        padding: 0;
-    }
+button::-moz-focus-inner,
+[type='button']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
+	border-style: none;
+	padding: 0;
+}
 
-    /**
+/**
  * Restore the focus styles unset by the previous rule.
  */
 
-    button:-moz-focusring,
-    [type="button"]:-moz-focusring,
-    [type="submit"]:-moz-focusring {
-        outline: 1px dotted ButtonText;
-    }
+button:-moz-focusring,
+[type='button']:-moz-focusring,
+[type='submit']:-moz-focusring {
+	outline: 1px dotted ButtonText;
+}
 
 /**
  * Correct the padding in Firefox.
@@ -233,26 +235,25 @@ button,
  * Removes the default spacing and border for appropriate elements.
  */
 
-
 h4,
 p {
-    margin: 0;
+	margin: 0;
 }
 
 button {
-    background-color: transparent;
-    background-image: none;
+	background-color: transparent;
+	background-image: none;
 }
 
-    /**
+/**
  * Work around a Firefox/IE bug where the transparent `button` background
  * results in a loss of the default `button` focus styles.
  */
 
-    button:focus {
-        outline: 1px dotted;
-        outline: 5px auto -webkit-focus-ring-color;
-    }
+button:focus {
+	outline: 1px dotted;
+	outline: 5px auto -webkit-focus-ring-color;
+}
 
 /**
  * Tailwind custom reset styles
@@ -266,8 +267,8 @@ button {
  */
 
 html {
-    font-family: Noto Sans; /* 1 */
-    line-height: 1.5; /* 2 */
+	font-family: Noto Sans; /* 1 */
+	line-height: 1.5; /* 2 */
 }
 
 /**
@@ -299,10 +300,10 @@ html {
 *,
 ::before,
 ::after {
-    box-sizing: border-box; /* 1 */
-    border-width: 0; /* 2 */
-    border-style: solid; /* 2 */
-    border-color: #e2e8f0; /* 2 */
+	box-sizing: border-box; /* 1 */
+	border-width: 0; /* 2 */
+	border-style: solid; /* 2 */
+	border-color: #e2e8f0; /* 2 */
 }
 
 /*
@@ -320,29 +321,28 @@ html {
  */
 
 img {
-    border-style: solid;
+	border-style: solid;
 }
 
 input::-moz-placeholder {
-    color: #a0aec0;
+	color: #a0aec0;
 }
 
 input:-ms-input-placeholder {
-    color: #a0aec0;
+	color: #a0aec0;
 }
 
 input::placeholder {
-    color: #a0aec0;
+	color: #a0aec0;
 }
 
 button {
-    cursor: pointer;
+	cursor: pointer;
 }
 
-
 h4 {
-    font-size: inherit;
-    font-weight: inherit;
+	font-size: inherit;
+	font-weight: inherit;
 }
 
 /**
@@ -351,8 +351,8 @@ h4 {
  */
 
 a {
-    color: inherit;
-    text-decoration: inherit;
+	color: inherit;
+	text-decoration: inherit;
 }
 
 /**
@@ -365,9 +365,9 @@ a {
 
 button,
 input {
-    padding: 0;
-    line-height: inherit;
-    color: inherit;
+	padding: 0;
+	line-height: inherit;
+	color: inherit;
 }
 
 /**
@@ -387,8 +387,8 @@ input {
 
 img,
 svg {
-    display: block;
-    vertical-align: middle;
+	display: block;
+	vertical-align: middle;
 }
 
 /**
@@ -399,369 +399,374 @@ svg {
  */
 
 img {
-    max-width: 100%;
-    height: auto;
+	max-width: 100%;
+	height: auto;
 }
 
 input:invalid {
-    box-shadow: none;
+	box-shadow: none;
 }
 
 .bg-transparent {
-    background-color: transparent;
+	background-color: transparent;
 }
 
 .bg-gray-100 {
-    --bg-opacity: 1;
-    background-color: #f7fafc;
-    background-color: rgba(247, 250, 252, var(--bg-opacity));
+	--bg-opacity: 1;
+	background-color: #f7fafc;
+	background-color: rgba(247, 250, 252, var(--bg-opacity));
 }
 
 .bg-blue-500 {
-    --bg-opacity: 1;
-    background-color: #4299e1;
-    background-color: rgba(66, 153, 225, var(--bg-opacity));
+	--bg-opacity: 1;
+	background-color: #4299e1;
+	background-color: rgba(66, 153, 225, var(--bg-opacity));
 }
 
 .focus-within\:border-blue-400:focus-within {
-    --border-opacity: 1;
-    border-color: #63b3ed;
-    border-color: rgba(99, 179, 237, var(--border-opacity));
+	--border-opacity: 1;
+	border-color: #63b3ed;
+	border-color: rgba(99, 179, 237, var(--border-opacity));
 }
 
 .rounded-lg {
-    border-radius: 0.5rem;
+	border-radius: 0.5rem;
 }
 
 .border {
-    border-width: 1px;
+	border-width: 1px;
 }
 
 .inline-block {
-    display: inline-block;
+	display: inline-block;
 }
 
 .flex {
-    display: flex;
+	display: flex;
 }
 
 .flex-col {
-    flex-direction: column;
+	flex-direction: column;
 }
 
 .items-center {
-    align-items: center;
+	align-items: center;
 }
 
 .justify-center {
-    justify-content: center;
+	justify-content: center;
 }
 
 .justify-between {
-    justify-content: space-between;
+	justify-content: space-between;
 }
 
 .flex-1 {
-    flex: 1 1 0%;
+	flex: 1 1 0%;
 }
 
 .font-sans {
-    font-family: Noto Sans;
+	font-family: Noto Sans;
 }
 
 .font-light {
-    font-weight: 300;
+	font-weight: 300;
 }
 
 .font-semibold {
-    font-weight: 600;
+	font-weight: 600;
 }
 
 .h-5 {
-    height: 1.25rem;
+	height: 1.25rem;
 }
 
 .h-12 {
-    height: 3rem;
+	height: 3rem;
 }
 
 .h-screen {
-    height: 100vh;
+	height: 100vh;
 }
 
 .text-xs {
-    font-size: 0.75rem;
+	font-size: 0.75rem;
 }
 
 .text-sm {
-    font-size: 0.875rem;
+	font-size: 0.875rem;
 }
 
 .text-base {
-    font-size: 1rem;
+	font-size: 1rem;
 }
 
 .text-lg {
-    font-size: 1.125rem;
+	font-size: 1.125rem;
 }
 
 .mx-0 {
-    margin-left: 0;
-    margin-right: 0;
+	margin-left: 0;
+	margin-right: 0;
 }
 
 .mx-2 {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 
 .my-4 {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 
 .mx-auto {
-    margin-left: auto;
-    margin-right: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .mt-2 {
-    margin-top: 0.5rem;
+	margin-top: 0.5rem;
 }
 
 .mt-4 {
-    margin-top: 1rem;
+	margin-top: 1rem;
 }
 
 .mt-5 {
-    margin-top: 1.25rem;
+	margin-top: 1.25rem;
 }
 
 .mt-8 {
-    margin-top: 2rem;
+	margin-top: 2rem;
 }
 
 .-mt-8 {
-    margin-top: -2rem;
+	margin-top: -2rem;
 }
 
 .min-h-screen {
-    min-height: 100vh;
+	min-height: 100vh;
 }
 
 .focus\:outline-none:focus {
-    outline: 0;
+	outline: 0;
 }
 
 .p-2 {
-    padding: 0.5rem;
+	padding: 0.5rem;
 }
 
 .p-12 {
-    padding: 3rem;
+	padding: 3rem;
 }
 
 .px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
 }
 
 .py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
 }
 
 .pr-4 {
-    padding-right: 1rem;
+	padding-right: 1rem;
 }
 
 .placeholder-gray-500::-moz-placeholder {
-    --placeholder-opacity: 1;
-    color: #a0aec0;
-    color: rgba(160, 174, 192, var(--placeholder-opacity));
+	--placeholder-opacity: 1;
+	color: #a0aec0;
+	color: rgba(160, 174, 192, var(--placeholder-opacity));
 }
 
 .placeholder-gray-500:-ms-input-placeholder {
-    --placeholder-opacity: 1;
-    color: #a0aec0;
-    color: rgba(160, 174, 192, var(--placeholder-opacity));
+	--placeholder-opacity: 1;
+	color: #a0aec0;
+	color: rgba(160, 174, 192, var(--placeholder-opacity));
 }
 
 .placeholder-gray-500::placeholder {
-    --placeholder-opacity: 1;
-    color: #a0aec0;
-    color: rgba(160, 174, 192, var(--placeholder-opacity));
+	--placeholder-opacity: 1;
+	color: #a0aec0;
+	color: rgba(160, 174, 192, var(--placeholder-opacity));
 }
 
 .focus\:shadow-outline:focus {
-    box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+	box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
 }
 
 .fill-current {
-    fill: currentColor;
+	fill: currentColor;
 }
 
 .text-left {
-    text-align: left;
+	text-align: left;
 }
 
 .text-center {
-    text-align: center;
+	text-align: center;
 }
 
 .text-gray-100 {
-    --text-opacity: 1;
-    color: #f7fafc;
-    color: rgba(247, 250, 252, var(--text-opacity));
+	--text-opacity: 1;
+	color: #f7fafc;
+	color: rgba(247, 250, 252, var(--text-opacity));
 }
 
 .text-gray-500 {
-    --text-opacity: 1;
-    color: #a0aec0;
-    color: rgba(160, 174, 192, var(--text-opacity));
+	--text-opacity: 1;
+	color: #a0aec0;
+	color: rgba(160, 174, 192, var(--text-opacity));
 }
 
 .text-gray-600 {
-    --text-opacity: 1;
-    color: #718096;
-    color: rgba(113, 128, 150, var(--text-opacity));
+	--text-opacity: 1;
+	color: #718096;
+	color: rgba(113, 128, 150, var(--text-opacity));
 }
 
 .text-gray-900 {
-    --text-opacity: 1;
-    color: #1a202c;
-    color: rgba(26, 32, 44, var(--text-opacity));
+	--text-opacity: 1;
+	color: #1a202c;
+	color: rgba(26, 32, 44, var(--text-opacity));
 }
 
 .text-red-500 {
-    --text-opacity: 1;
-    color: #f56565;
-    color: rgba(245, 101, 101, var(--text-opacity));
+	--text-opacity: 1;
+	color: #f56565;
+	color: rgba(245, 101, 101, var(--text-opacity));
 }
 
 .text-blue-500 {
-    --text-opacity: 1;
-    color: #4299e1;
-    color: rgba(66, 153, 225, var(--text-opacity));
+	--text-opacity: 1;
+	color: #4299e1;
+	color: rgba(66, 153, 225, var(--text-opacity));
 }
 
 .tracking-wide {
-    letter-spacing: 0.025em;
+	letter-spacing: 0.025em;
 }
 
 .w-full {
-    width: 100%;
+	width: 100%;
 }
 
 .z-10 {
-    z-index: 10;
+	z-index: 10;
 }
 
 .z-20 {
-    z-index: 20;
+	z-index: 20;
 }
 
 .transform {
-    --transform-translate-x: 0;
-    --transform-translate-y: 0;
-    --transform-rotate: 0;
-    --transform-skew-x: 0;
-    --transform-skew-y: 0;
-    --transform-scale-x: 1;
-    --transform-scale-y: 1;
-    transform: translateX(var(--transform-translate-x)) translateY(var(--transform-translate-y)) rotate(var(--transform-rotate)) skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y)) scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y));
+	--transform-translate-x: 0;
+	--transform-translate-y: 0;
+	--transform-rotate: 0;
+	--transform-skew-x: 0;
+	--transform-skew-y: 0;
+	--transform-scale-x: 1;
+	--transform-scale-y: 1;
+	transform: translateX(var(--transform-translate-x))
+		translateY(var(--transform-translate-y)) rotate(var(--transform-rotate))
+		skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y))
+		scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y));
 }
 
 .transition-all {
-    transition-property: all;
+	transition-property: all;
 }
 
 .ease-in-out {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .duration-300 {
-    transition-duration: 300ms;
+	transition-duration: 300ms;
 }
 
 @-webkit-keyframes spin {
-    to {
-        transform: rotate(360deg);
-    }
+	to {
+		transform: rotate(360deg);
+	}
 }
 
 @keyframes spin {
-    to {
-        transform: rotate(360deg);
-    }
+	to {
+		transform: rotate(360deg);
+	}
 }
 
 @keyframes ping {
-    75%, 100% {
-        transform: scale(2);
-        opacity: 0;
-    }
+	75%,
+	100% {
+		transform: scale(2);
+		opacity: 0;
+	}
 }
 
 @keyframes pulse {
-    50% {
-        opacity: .5;
-    }
+	50% {
+		opacity: 0.5;
+	}
 }
 
 @keyframes bounce {
-    0%, 100% {
-        transform: translateY(-25%);
-        -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-        animation-timing-function: cubic-bezier(0.8,0,1,1);
-    }
+	0%,
+	100% {
+		transform: translateY(-25%);
+		-webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+		animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+	}
 
-    50% {
-        transform: none;
-        -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-        animation-timing-function: cubic-bezier(0,0,0.2,1);
-    }
+	50% {
+		transform: none;
+		-webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+		animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+	}
 }
 
 @media (min-width: 640px) {
+	.sm\:bg-white {
+		--bg-opacity: 1;
+		background-color: #fff;
+		background-color: rgba(255, 255, 255, var(--bg-opacity));
+	}
 
-    .sm\:bg-white {
-        --bg-opacity: 1;
-        background-color: #fff;
-        background-color: rgba(255, 255, 255, var(--bg-opacity));
-    }
+	.sm\:rounded-lg {
+		border-radius: 0.5rem;
+	}
 
-    .sm\:rounded-lg {
-        border-radius: 0.5rem;
-    }
+	.sm\:h-full {
+		height: 100%;
+	}
 
-    .sm\:h-full {
-        height: 100%;
-    }
+	.sm\:mx-auto {
+		margin-left: auto;
+		margin-right: auto;
+	}
 
-    .sm\:mx-auto {
-        margin-left: auto;
-        margin-right: auto;
-    }
+	.sm\:mt-2 {
+		margin-top: 0.5rem;
+	}
 
-    .sm\:mt-2 {
-        margin-top: 0.5rem;
-    }
+	.sm\:mt-16 {
+		margin-top: 4rem;
+	}
 
-    .sm\:mt-16 {
-        margin-top: 4rem;
-    }
+	.sm\:shadow-lg {
+		box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+			0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	}
 
-    .sm\:shadow-lg {
-        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    }
-
-    .sm\:w-128 {
-        width: 32rem;
-    }
+	.sm\:w-128 {
+		width: 32rem;
+	}
 }
