--- a/AuthenticationApp/src/AuthServer/Pages/Account/Register.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Register.cshtml
@@ -71,7 +71,7 @@
                         </defs>
                     </svg>
                 </div>
-                <p class="text-sm text-center text-gray-600">Already a member? <a class="text-blue-500"> Login </a></p>
+                <p class="text-sm text-center text-gray-600">Already a member? <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl" class="text-blue-500"> Login </a></p>
             </div>
         </div>
     </div>
