--- a/AuthenticationApp/src/AuthServer/Pages/_Layout.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Authentication App</title>
+    <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/dotnet/css/app.css" />
 </head>
 <body class="font-sans bg-gray-100">
