--- a/AuthenticationApp/src/AuthServer/wwwroot/dotnet/css/app.css
+++ b/AuthenticationApp/src/AuthServer/wwwroot/dotnet/css/app.css
@@ -35,6 +35,11 @@ body {
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
+h1 {
+	font-size: 2em;
+	margin: 0.67em 0;
+}
+
 /* Grouping content
    ========================================================================== */
 
@@ -102,7 +107,8 @@ img {
  */
 
 button,
-input {
+input,
+textarea {
 	font-family: inherit; /* 1 */
 	font-size: 100%; /* 1 */
 	line-height: 1.15; /* 1 */
@@ -115,8 +121,7 @@ input {
  */
 
 button,
-input {
-	/* 1 */
+input { /* 1 */
 	overflow: visible;
 }
 
@@ -125,8 +130,7 @@ input {
  * 1. Remove the inheritance of text transform in Firefox.
  */
 
-button {
-	/* 1 */
+button { /* 1 */
 	text-transform: none;
 }
 
@@ -135,31 +139,31 @@ button {
  */
 
 button,
-[type='button'],
-[type='submit'] {
+[type="button"],
+[type="submit"] {
 	-webkit-appearance: button;
 }
 
-/**
+	/**
  * Remove the inner border and padding in Firefox.
  */
 
-button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner {
-	border-style: none;
-	padding: 0;
-}
+	button::-moz-focus-inner,
+	[type="button"]::-moz-focus-inner,
+	[type="submit"]::-moz-focus-inner {
+		border-style: none;
+		padding: 0;
+	}
 
-/**
+	/**
  * Restore the focus styles unset by the previous rule.
  */
 
-button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='submit']:-moz-focusring {
-	outline: 1px dotted ButtonText;
-}
+	button:-moz-focusring,
+	[type="button"]:-moz-focusring,
+	[type="submit"]:-moz-focusring {
+		outline: 1px dotted ButtonText;
+	}
 
 /**
  * Correct the padding in Firefox.
@@ -179,6 +183,10 @@ button:-moz-focusring,
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
+
+textarea {
+	overflow: auto;
+}
 
 /**
  * 1. Add the correct box sizing in IE 10.
@@ -235,6 +243,8 @@ button:-moz-focusring,
  * Removes the default spacing and border for appropriate elements.
  */
 
+
+h1,
 h4,
 p {
 	margin: 0;
@@ -245,15 +255,15 @@ button {
 	background-image: none;
 }
 
-/**
+	/**
  * Work around a Firefox/IE bug where the transparent `button` background
  * results in a loss of the default `button` focus styles.
  */
 
-button:focus {
-	outline: 1px dotted;
-	outline: 5px auto -webkit-focus-ring-color;
-}
+	button:focus {
+		outline: 1px dotted;
+		outline: 5px auto -webkit-focus-ring-color;
+	}
 
 /**
  * Tailwind custom reset styles
@@ -324,22 +334,28 @@ img {
 	border-style: solid;
 }
 
-input::-moz-placeholder {
-	color: #a0aec0;
+textarea {
+	resize: vertical;
 }
 
-input:-ms-input-placeholder {
-	color: #a0aec0;
-}
+	input::-moz-placeholder, textarea::-moz-placeholder {
+		color: #a0aec0;
+	}
 
-input::placeholder {
-	color: #a0aec0;
-}
+	input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+		color: #a0aec0;
+	}
+
+	input::placeholder,
+	textarea::placeholder {
+		color: #a0aec0;
+	}
 
 button {
 	cursor: pointer;
 }
 
+h1,
 h4 {
 	font-size: inherit;
 	font-weight: inherit;
@@ -364,7 +380,8 @@ a {
  */
 
 button,
-input {
+input,
+textarea {
 	padding: 0;
 	line-height: inherit;
 	color: inherit;
@@ -403,12 +420,46 @@ img {
 	height: auto;
 }
 
+.container {
+	width: 100%;
+}
+
+@media (min-width: 640px) {
+	.container {
+		max-width: 640px;
+	}
+}
+
+@media (min-width: 768px) {
+	.container {
+		max-width: 768px;
+	}
+}
+
+@media (min-width: 1024px) {
+	.container {
+		max-width: 1024px;
+	}
+}
+
+@media (min-width: 1280px) {
+	.container {
+		max-width: 1280px;
+	}
+}
+
 input:invalid {
 	box-shadow: none;
 }
 
 .bg-transparent {
 	background-color: transparent;
+}
+
+.bg-white {
+	--bg-opacity: 1;
+	background-color: #fff;
+	background-color: rgba(255, 255, 255, var(--bg-opacity));
 }
 
 .bg-gray-100 {
@@ -423,10 +474,38 @@ input:invalid {
 	background-color: rgba(66, 153, 225, var(--bg-opacity));
 }
 
+.bg-blue-700 {
+	--bg-opacity: 1;
+	background-color: #2b6cb0;
+	background-color: rgba(43, 108, 176, var(--bg-opacity));
+}
+
+.hover\:bg-accent:hover {
+	--bg-opacity: 1;
+	background-color: #C73622;
+	background-color: rgba(199, 54, 34, var(--bg-opacity));
+}
+
+.border-gray-500 {
+	--border-opacity: 1;
+	border-color: #a0aec0;
+	border-color: rgba(160, 174, 192, var(--border-opacity));
+}
+
+.focus\:border-blue-400:focus {
+	--border-opacity: 1;
+	border-color: #63b3ed;
+	border-color: rgba(99, 179, 237, var(--border-opacity));
+}
+
 .focus-within\:border-blue-400:focus-within {
 	--border-opacity: 1;
 	border-color: #63b3ed;
 	border-color: rgba(99, 179, 237, var(--border-opacity));
+}
+
+.rounded {
+	border-radius: 0.25rem;
 }
 
 .rounded-lg {
@@ -449,8 +528,16 @@ input:invalid {
 	flex-direction: column;
 }
 
+.flex-wrap {
+	flex-wrap: wrap;
+}
+
 .items-center {
 	align-items: center;
+}
+
+.justify-end {
+	justify-content: flex-end;
 }
 
 .justify-center {
@@ -477,8 +564,16 @@ input:invalid {
 	font-weight: 600;
 }
 
+.font-bold {
+	font-weight: 700;
+}
+
 .h-5 {
 	height: 1.25rem;
+}
+
+.h-10 {
+	height: 2.5rem;
 }
 
 .h-12 {
@@ -505,6 +600,26 @@ input:invalid {
 	font-size: 1.125rem;
 }
 
+.text-xl {
+	font-size: 1.25rem;
+}
+
+.text-2xl {
+	font-size: 1.5rem;
+}
+
+.leading-normal {
+	line-height: 1.5;
+}
+
+.m-0 {
+	margin: 0;
+}
+
+.m-2 {
+	margin: 0.5rem;
+}
+
 .mx-0 {
 	margin-left: 0;
 	margin-right: 0;
@@ -529,6 +644,10 @@ input:invalid {
 	margin-top: 0.5rem;
 }
 
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
+
 .mt-4 {
 	margin-top: 1rem;
 }
@@ -537,8 +656,28 @@ input:invalid {
 	margin-top: 1.25rem;
 }
 
+.mt-6 {
+	margin-top: 1.5rem;
+}
+
+.mb-6 {
+	margin-bottom: 1.5rem;
+}
+
 .mt-8 {
 	margin-top: 2rem;
+}
+
+.mt-12 {
+	margin-top: 3rem;
+}
+
+.mb-12 {
+	margin-bottom: 3rem;
+}
+
+.mt-16 {
+	margin-top: 4rem;
 }
 
 .-mt-8 {
@@ -557,8 +696,22 @@ input:invalid {
 	padding: 0.5rem;
 }
 
+.p-8 {
+	padding: 2rem;
+}
+
 .p-12 {
 	padding: 3rem;
+}
+
+.py-2 {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+
+.px-2 {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -580,6 +733,14 @@ input:invalid {
 	padding-right: 1rem;
 }
 
+.pl-4 {
+	padding-left: 1rem;
+}
+
+.pt-8 {
+	padding-top: 2rem;
+}
+
 .placeholder-gray-500::-moz-placeholder {
 	--placeholder-opacity: 1;
 	color: #a0aec0;
@@ -598,6 +759,18 @@ input:invalid {
 	color: rgba(160, 174, 192, var(--placeholder-opacity));
 }
 
+.fixed {
+	position: fixed;
+}
+
+.top-0 {
+	top: 0;
+}
+
+.shadow {
+	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
 .focus\:shadow-outline:focus {
 	box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
 }
@@ -612,6 +785,12 @@ input:invalid {
 
 .text-center {
 	text-align: center;
+}
+
+.text-white {
+	--text-opacity: 1;
+	color: #fff;
+	color: rgba(255, 255, 255, var(--text-opacity));
 }
 
 .text-gray-100 {
@@ -632,6 +811,12 @@ input:invalid {
 	color: rgba(113, 128, 150, var(--text-opacity));
 }
 
+.text-gray-700 {
+	--text-opacity: 1;
+	color: #4a5568;
+	color: rgba(74, 85, 104, var(--text-opacity));
+}
+
 .text-gray-900 {
 	--text-opacity: 1;
 	color: #1a202c;
@@ -650,8 +835,35 @@ input:invalid {
 	color: rgba(66, 153, 225, var(--text-opacity));
 }
 
+.hover\:text-accent:hover {
+	--text-opacity: 1;
+	color: #C73622;
+	color: rgba(199, 54, 34, var(--text-opacity));
+}
+
+.uppercase {
+	text-transform: uppercase;
+}
+
+.tracking-tight {
+	letter-spacing: -0.025em;
+}
+
+.tracking-normal {
+	letter-spacing: 0;
+}
+
 .tracking-wide {
 	letter-spacing: 0.025em;
+}
+
+.tracking-wider {
+	letter-spacing: 0.05em;
+}
+
+.break-normal {
+	overflow-wrap: normal;
+	word-break: normal;
 }
 
 .w-full {
@@ -674,10 +886,7 @@ input:invalid {
 	--transform-skew-y: 0;
 	--transform-scale-x: 1;
 	--transform-scale-y: 1;
-	transform: translateX(var(--transform-translate-x))
-		translateY(var(--transform-translate-y)) rotate(var(--transform-rotate))
-		skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y))
-		scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y));
+	transform: translateX(var(--transform-translate-x)) translateY(var(--transform-translate-y)) rotate(var(--transform-rotate)) skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y)) scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y));
 }
 
 .transition-all {
@@ -705,8 +914,7 @@ input:invalid {
 }
 
 @keyframes ping {
-	75%,
-	100% {
+	75%, 100% {
 		transform: scale(2);
 		opacity: 0;
 	}
@@ -714,26 +922,26 @@ input:invalid {
 
 @keyframes pulse {
 	50% {
-		opacity: 0.5;
+		opacity: .5;
 	}
 }
 
 @keyframes bounce {
-	0%,
-	100% {
+	0%, 100% {
 		transform: translateY(-25%);
-		-webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-		animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+		-webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
+		animation-timing-function: cubic-bezier(0.8,0,1,1);
 	}
 
 	50% {
 		transform: none;
-		-webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-		animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+		-webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
+		animation-timing-function: cubic-bezier(0,0,0.2,1);
 	}
 }
 
 @media (min-width: 640px) {
+
 	.sm\:bg-white {
 		--bg-opacity: 1;
 		background-color: #fff;
@@ -762,11 +970,68 @@ input:invalid {
 	}
 
 	.sm\:shadow-lg {
-		box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-			0 4px 6px -2px rgba(0, 0, 0, 0.05);
+		box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	}
 
 	.sm\:w-128 {
 		width: 32rem;
+	}
+}
+
+@media (min-width: 768px) {
+
+	.md\:items-center {
+		align-items: center;
+	}
+
+	.md\:text-2xl {
+		font-size: 1.5rem;
+	}
+
+	.md\:mb-0 {
+		margin-bottom: 0;
+	}
+
+	.md\:pl-0 {
+		padding-left: 0;
+	}
+
+	.md\:text-left {
+		text-align: left;
+	}
+}
+
+@media (min-width: 1024px) {
+
+	.lg\:flex {
+		display: flex;
+	}
+
+	.lg\:items-center {
+		align-items: center;
+	}
+
+	.lg\:mt-0 {
+		margin-top: 0;
+	}
+
+	.lg\:mr-12 {
+		margin-right: 3rem;
+	}
+
+	.lg\:pt-16 {
+		padding-top: 4rem;
+	}
+
+	.lg\:w-2\/3 {
+		width: 66.666667%;
+	}
+
+	.lg\:w-1\/4 {
+		width: 25%;
+	}
+
+	.lg\:w-3\/4 {
+		width: 75%;
 	}
 }
