Added initial profile page

--- a/AuthenticationApp/src/AuthServer/Pages/Account/Manage/Index.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Manage/Index.cshtml
@@ -49,10 +49,10 @@
 
                 <div class="lg:flex mb-6 lg:items-center lg:mr-12">
                     <div class="lg:w-1/4">
-                        <label class="text-gray-600 font-semibold md:text-left text-sm mb-3 md:mb-0 pr-4 uppercase"> </label>
+                        <label asp-for="Input.Email" class="text-gray-600 font-semibold md:text-left text-sm mb-3 md:mb-0 pr-4 uppercase"> </label>
                     </div>
                     <div class="lg:w-3/4">
-                        <input class="w-full px-4 bg-gray-100 h-10 rounded-lg border border-gray-500 focus:border-blue-400" type="text" />
+                        <input asp-for="Input.Email" class="w-full px-4 bg-gray-100 h-10 rounded-lg border border-gray-500 focus:border-blue-400" type="text" />
                     </div>
                 </div>
 
