Added auth validation on dropdown component

--- a/AuthenticationApp/src/AuthServer/Pages/Account/Logout.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Logout.cshtml
@@ -5,18 +5,9 @@
 }
 
 <header>
-    <h1>@ViewData["Title"]</h1>
+    
     @{
-        if (User.Identity.IsAuthenticated)
-        {
-            <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit">Click here to Logout</button>
-            </form>
-        }
-        else
-        {
-            <p>You have successfully logged out of the application.</p>
-        }
+            <p>Logging out...</p>
     }
 </header>
 
