--- a/AuthenticationApp/src/AuthServer/Pages/Account/Manage/Index.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Manage/Index.cshtml
@@ -11,17 +11,23 @@
         <h1 class="font-bold break-normal text-gray-700 px-2 text-2xl mt-12 lg:mt-0">Change Info</h1>
         <p class="text-gray-700 mb-12 px-2 text-sm tracking-tight">Changes will be reflected to every services</p>
 
-        <form method="post">
+        <form enctype="multipart/form-data" method="post">
             <div class="lg:flex mb-6 lg:items-center">
                 <div class="lg:w-1/4">
                     <label class="text-gray-600 font-semibold md:text-left text-sm mb-3 md:mb-0 pr-4 uppercase"> Photo </label>
                 </div>
                 <div class="lg:w-3/4">
-                    <img class="inline-block" src="" />
-                    <a asp-page="ChangePhoto" class="uppercase text-sm tracking-normal text-blue-500 font-semibold hover:text-accent" >Change Photo</a>
+                    @*<a asp-page="ChangePhoto" class="uppercase text-sm tracking-normal text-blue-500 font-semibold hover:text-accent">Change Photo</a>*@
+
+                    <label class="h-24 w-24 flex flex-col items-center bg-white rounded-lg text-transparent shadow-lg tracking-wide uppercase border border-blue-500 cursor-pointer hover:bg-blue-500 hover:text-blue-500">
+                        <img class="h-full w-full object-cover rounded-lg" src="@Model.Input.Photo" />
+                        <svg class="absolute my-4 w-8 h-8" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                            <path d="M16.88 9.1A4 4 0 0 1 16 17H5a5 5 0 0 1-1-9.9V7a3 3 0 0 1 4.52-2.59A4.98 4.98 0 0 1 17 8c0 .38-.04.74-.12 1.1zM11 11h3l-4-4-4 4h3v3h2v-3z" />
+                        </svg>
+                        <input name="file" type="file" class="hidden" />
+                    </label>
                 </div>
             </div>
-
             <div class="lg:flex mb-6 lg:items-center lg:mr-12">
                 <div class="lg:w-1/4">
                     <label asp-for="Input.Email" class="text-gray-600 font-semibold md:text-left text-sm mb-3 md:mb-0 pr-4 uppercase"> </label>
@@ -60,7 +66,7 @@
                     <span asp-validation-for="Input.PhoneNumber" class="text-red-500 font-light text-xs"></span>
                 </div>
             </div>
-           
+
             <div class="lg:flex mb-6 lg:items-center lg:mr-12">
                 <div class="lg:w-1/4">
                     <label asp-for="Input.ContactEmail" class="text-gray-600 font-semibold md:text-left text-sm mb-3 md:mb-0 pr-4 uppercase"> </label>
@@ -76,7 +82,7 @@
                     <label class="text-gray-600 font-semibold md:text-left text-sm mb-3 md:mb-0 pr-4 uppercase" for="profile-email"> Password </label>
                 </div>
                 <div class="lg:w-3/4">
-                    <a asp-page="ChangePassword" class="uppercase text-sm tracking-normal text-blue-500 font-semibold hover:text-accent" >Change Password</a>
+                    <a class="uppercase text-sm tracking-normal text-blue-500 font-semibold hover:text-accent">Change Password</a>
                 </div>
             </div>
 
