--- a/AuthenticationApp/src/AuthServer/Pages/Account/Manage/_Layout.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Manage/_Layout.cshtml
@@ -12,9 +12,7 @@
         @RenderBody()
     </div>
 
-    @section Scripts {
-        @RenderSection("Scripts", required: false)
-    }
+    @RenderSection("Scripts", false)
 
 </body>
 </html>
