Added github login

--- a/AuthenticationApp/src/AuthServer/Pages/Account/Manage/Index.cshtml
+++ b/AuthenticationApp/src/AuthServer/Pages/Account/Manage/Index.cshtml
@@ -82,7 +82,7 @@
                     <label class="text-gray-600 font-semibold md:text-left text-sm mb-3 md:mb-0 pr-4 uppercase" for="profile-email"> Password </label>
                 </div>
                 <div class="lg:w-3/4">
-                    <a class="uppercase text-sm tracking-normal text-blue-500 font-semibold hover:text-accent">Change Password</a>
+                    <a asp-page="./ChangePassword" class="uppercase text-sm tracking-normal text-blue-500 font-semibold hover:text-accent">Change Password</a>
                 </div>
             </div>
 
